Revision history for Perl extension Wx.

	- Added wxSpinCtrlDouble (2.9).
	- Added wxDataViewListCtrl (2.9).
	- Added wxDataViewVirtualListModel (2.9).
	- Added wxInfoBar (2.9).
	- Added wxHeaderCtrlSimple (2.9).

0.9702  Thu May  6 01:53:50 CEST 2010
	- Released 0.9701_02 as 0.9702.

0.9701_02  Mon Apr 26 21:56:09 CEST 2010
	- Wrapped wxRichTextPrinting

0.9701_01  Tue Mar 30 22:46:33 CEST 2010
	- 64 Bit build fixes.
	- Wrapped wxMenuBar::MacSetCommonMenuBar, MacInstallMenuBar
	- Wrapped wxGCDC::GetGraphicsContext

0.9701  Thu Feb 11 16:03:42 CET 2010
	- Bump the required version of ExtUtils::XSpp and ExtUtils::ParseXS.

0.97  Tue Feb  9 22:57:14 CET 2010
	- Added wxOverlay and wxDCOverlay (2.8) (thanks to Mark Dootson).
	- Added Wx::Loader - allows PPM distributions and packagers to
	  override wx dll loading (see Wx::Loader pod)
	- Loading plugins - local override of dl_load_file now uses
	  Wx::_load_plugin during XSLoader::load

0.96  Sat Jan  9 10:40:00 CET 2010
	- Fixed Windows MSVC 6 build.

0.95  Fri Dec 25 18:24:44 CET 2009
	- Only preload wxWidgets' DLL under Windows.
	- Some Windows build fixes.

0.94  Sun Nov  8 14:10:32 CET 2009
	- Remove the last use of the xspp command line script.
	- Compilation fix for Strawberry Perl 5.10 (probably needed for all
	  Perl 5.10 builds on Windows).
	- wxWidgets 2.9.0 compatibility.

0.93  Gio 24 Set 2009 21:34:10 CEST
	- Use ExtUtils::XSpp::Cmd instead of the xspp command
	  line script.

0.92  Thu Aug  6 21:04:59 CEST 2009
	- Compilation fix for ActivePerl.
	- First public release to use ExtUtils::XSpp.

0.91_01  Thu Jun 25 00:30:17 CEST 2009
	- xspp is no longer part of Wx (See ExtUtils::XSpp)

0.91  Sun May 17 18:55:45 CEST 2009
	- Threading fixes for 25 classes.
	- Fixed Windows build (patch by Ahmad Zawawi).

0.90  Sun May 10 09:24:25 CEST 2009
	- Miscellaneous build/compilation fixes.

0.89  Sat Dec  6 11:39:54 CET 2008
	- Fix crash when using AUI and threads.

0.88  Sun Nov  9 18:03:25 CET 2008